PLC_Lab8/obj/Debug/net5.0/PLC_Lab8_exprParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\render\Desktop\skola\skola_sesty_semestr\pjp\PLC_Lab8\PLC_Lab8\PLC_Lab8_expr.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace PLC_Lab8 {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class PLC_Lab8_exprParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, WRITE=6, READ=7, IF=8, ELSE=9, 
		WHILE=10, INT_KEYWORD=11, FLOAT_KEYWORD=12, STRING_KEYWORD=13, BOOL_KEYWORD=14, 
		SEMI=15, COMMA=16, MUL=17, DIV=18, ADD=19, SUB=20, MOD=21, DOT=22, GT=23, 
		LT=24, EQUAL=25, NOTEQUAL=26, AND=27, OR=28, BANG=29, IDENTIFIER=30, FLOAT=31, 
		INT=32, BOOL=33, STRING=34, WS=35, LINE_COMMENT=36;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_expr = 2, RULE_primitiveType = 3;
	public static readonly string[] ruleNames = {
		"program", "statement", "expr", "primitiveType"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'('", "')'", "'='", "'write'", "'read'", "'if'", 
		"'else'", "'while'", "'int'", "'float'", "'string'", "'bool'", "';'", 
		"','", "'*'", "'/'", "'+'", "'-'", "'%'", "'.'", "'>'", "'<'", "'=='", 
		"'!='", "'&&'", "'||'", "'!'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "WRITE", "READ", "IF", "ELSE", "WHILE", 
		"INT_KEYWORD", "FLOAT_KEYWORD", "STRING_KEYWORD", "BOOL_KEYWORD", "SEMI", 
		"COMMA", "MUL", "DIV", "ADD", "SUB", "MOD", "DOT", "GT", "LT", "EQUAL", 
		"NOTEQUAL", "AND", "OR", "BANG", "IDENTIFIER", "FLOAT", "INT", "BOOL", 
		"STRING", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PLC_Lab8_expr.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PLC_Lab8_exprParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 8; statement();
				}
				}
				State = 11;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << WRITE) | (1L << READ) | (1L << IF) | (1L << ELSE) | (1L << WHILE) | (1L << INT_KEYWORD) | (1L << FLOAT_KEYWORD) | (1L << STRING_KEYWORD) | (1L << BOOL_KEYWORD) | (1L << SEMI) | (1L << SUB) | (1L << BANG) | (1L << IDENTIFIER) | (1L << FLOAT) | (1L << INT) | (1L << BOOL) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
	 
		public StatementContext() { }
		public virtual void CopyFrom(StatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class WriteExprContext : StatementContext {
		public ITerminalNode WRITE() { return GetToken(PLC_Lab8_exprParser.WRITE, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public WriteExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterWriteExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitWriteExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWriteExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileExprContext : StatementContext {
		public ITerminalNode WHILE() { return GetToken(PLC_Lab8_exprParser.WHILE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public WhileExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterWhileExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitWhileExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ReadExprContext : StatementContext {
		public ITerminalNode READ() { return GetToken(PLC_Lab8_exprParser.READ, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ReadExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterReadExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitReadExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReadExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfExprContext : StatementContext {
		public ITerminalNode IF() { return GetToken(PLC_Lab8_exprParser.IF, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public IfExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterIfExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitIfExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ElseExprContext : StatementContext {
		public ITerminalNode ELSE() { return GetToken(PLC_Lab8_exprParser.ELSE, 0); }
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public ElseExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterElseExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitElseExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeclarationContext : StatementContext {
		public PrimitiveTypeContext primitiveType() {
			return GetRuleContext<PrimitiveTypeContext>(0);
		}
		public ITerminalNode[] IDENTIFIER() { return GetTokens(PLC_Lab8_exprParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(PLC_Lab8_exprParser.IDENTIFIER, i);
		}
		public DeclarationContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Parens1Context : StatementContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public Parens1Context(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterParens1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitParens1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParens1(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PrintExprContext : StatementContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PrintExprContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterPrintExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitPrintExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EmptyContext : StatementContext {
		public EmptyContext(StatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterEmpty(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitEmpty(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			State = 68;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__0:
				_localctx = new Parens1Context(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 13; Match(T__0);
				State = 17;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << WRITE) | (1L << READ) | (1L << IF) | (1L << ELSE) | (1L << WHILE) | (1L << INT_KEYWORD) | (1L << FLOAT_KEYWORD) | (1L << STRING_KEYWORD) | (1L << BOOL_KEYWORD) | (1L << SEMI) | (1L << SUB) | (1L << BANG) | (1L << IDENTIFIER) | (1L << FLOAT) | (1L << INT) | (1L << BOOL) | (1L << STRING))) != 0)) {
					{
					{
					State = 14; statement();
					}
					}
					State = 19;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 20; Match(T__1);
				}
				break;
			case INT_KEYWORD:
			case FLOAT_KEYWORD:
			case STRING_KEYWORD:
			case BOOL_KEYWORD:
				_localctx = new DeclarationContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 21; primitiveType();
				State = 22; Match(IDENTIFIER);
				State = 27;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 23; Match(COMMA);
					State = 24; Match(IDENTIFIER);
					}
					}
					State = 29;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 30; Match(SEMI);
				}
				break;
			case T__2:
			case SUB:
			case BANG:
			case IDENTIFIER:
			case FLOAT:
			case INT:
			case BOOL:
			case STRING:
				_localctx = new PrintExprContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 32; expr(0);
				State = 33; Match(SEMI);
				}
				break;
			case WRITE:
				_localctx = new WriteExprContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 35; Match(WRITE);
				State = 36; expr(0);
				State = 41;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 37; Match(COMMA);
					State = 38; expr(0);
					}
					}
					State = 43;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 44; Match(SEMI);
				}
				break;
			case READ:
				_localctx = new ReadExprContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 46; Match(READ);
				State = 47; expr(0);
				State = 52;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 48; Match(COMMA);
					State = 49; expr(0);
					}
					}
					State = 54;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 55; Match(SEMI);
				}
				break;
			case IF:
				_localctx = new IfExprContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 57; Match(IF);
				State = 58; expr(0);
				State = 59; statement();
				}
				break;
			case ELSE:
				_localctx = new ElseExprContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 61; Match(ELSE);
				State = 62; statement();
				}
				break;
			case WHILE:
				_localctx = new WhileExprContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 63; Match(WHILE);
				State = 64; expr(0);
				State = 65; statement();
				}
				break;
			case SEMI:
				_localctx = new EmptyContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 67; Match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MulDivModContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode MUL() { return GetToken(PLC_Lab8_exprParser.MUL, 0); }
		public ITerminalNode DIV() { return GetToken(PLC_Lab8_exprParser.DIV, 0); }
		public ITerminalNode MOD() { return GetToken(PLC_Lab8_exprParser.MOD, 0); }
		public MulDivModContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterMulDivMod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitMulDivMod(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMulDivMod(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParensContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ParensContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterParens(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitParens(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParens(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ExprContext {
		public ITerminalNode STRING() { return GetToken(PLC_Lab8_exprParser.STRING, 0); }
		public StringContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolContext : ExprContext {
		public ITerminalNode BOOL() { return GetToken(PLC_Lab8_exprParser.BOOL, 0); }
		public BoolContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentContext : ExprContext {
		public ITerminalNode IDENTIFIER() { return GetToken(PLC_Lab8_exprParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssignmentContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnarySubContext : ExprContext {
		public ITerminalNode SUB() { return GetToken(PLC_Lab8_exprParser.SUB, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public UnarySubContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterUnarySub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitUnarySub(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnarySub(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FloatContext : ExprContext {
		public ITerminalNode FLOAT() { return GetToken(PLC_Lab8_exprParser.FLOAT, 0); }
		public FloatContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterFloat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitFloat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloat(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntContext : ExprContext {
		public ITerminalNode INT() { return GetToken(PLC_Lab8_exprParser.INT, 0); }
		public IntContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterInt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitInt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AndOrContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode AND() { return GetToken(PLC_Lab8_exprParser.AND, 0); }
		public ITerminalNode OR() { return GetToken(PLC_Lab8_exprParser.OR, 0); }
		public AndOrContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.EnterAndOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPLC_Lab8_exprListener typedListener = listener as IPLC_Lab8_exprListener;
			if (typedListener != null) typedListener.ExitAndOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPLC_Lab8_exprVisitor<TResult> typedVisitor = visitor as IPLC_Lab8_exprVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class GtLtEquNotEquContext : ExprContext {
		public IToken op;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
